--- a/dl_lab.ipynb
+++ b/dl_lab.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
